--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -14,94 +14,149 @@
   <![endif]-->
 </head>
 
-<body>
+<div class="container">
+  <header>
+    <nav>
+      <a href="services.html">Services</a>
+      <a href="#">Product</a>
+      <a href="#">Vision</a>
+      <a href="#">Features</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
+    </nav>
+    <a href="index.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
+  </header>
 
+  <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
 
-Services
-Product
-Vision
-Features
-About
-Contact
+  <section class="services">
 
-<img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+    <div>
+      <h2>Services</h2>
 
+      <p>
+        Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus
+        rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur
+        cursus
+        et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod
+        facilisis iaculis.
+      </p>
+    </div>
 
-<img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
+  </section>
 
-Services
+  <section class="rows">
 
-Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.
+    <div class="box">
+      <h3>Digital Design</h3>
 
+      <p>
+        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
+        neque,
+        sed faucibus nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.
+      </p>
 
-Digital Design
+      <button>Learn More</button>
+    </div>
+    <div class="box">
+      <h3>UX / UI</h3>
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+      <p>
+        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
+        neque,
+        sed faucibus nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.
+      </p>
 
-Learn More
-
-
-
-UX / UI
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-Digital Marketing
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-Web Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-iOS Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
+      <button>Learn More</button>
+    </div>
 
 
 
-Android Development
+    <div class="box">
+      <h3>Digital Marketing</h3>
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+      <p>
+        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
+        neque,
+        sed faucibus nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.
+      </p>
 
-Learn More
+      <button>Learn More</button>
+    </div>
 
+    <div class="box">
+      <h3>Web Development</h3>
 
-Some Facts About Our Services
+      <p>
+        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
+        neque,
+        sed faucibus nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.
+      </p>
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+      <button>Learn More</button>
+    </div>
 
+    <div class="box">
+      <h3>iOS Development</h3>
 
-Awesome thing
-Amazing thing
-Cool thing
-Great thing
+      <p>
+        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
+        neque,
+        sed faucibus nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.
+      </p>
 
-<img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
+      <button>Learn More</button>
+    </div>
+    <div class="box">
 
-Copyright Great Idea! 2018
+      <h3>Android Development</h3>
 
+      <p>
+        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
+        neque,
+        sed faucibus nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.
+      </p>
+
+      <button>Learn More</button>
+    </div>
+
+  </section>
+
+  <section class="facts">
+    <div class="facts-body">
+      <h3>Some Facts About Our Services</h3>
+
+      <p>
+        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris
+        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+        faucibus nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.
+      </p>
+      <ul>
+        <li>Awesome thing</li>
+        <li>Amazing thing</li>
+        <li>Cool thing</li>
+        <li>Great thing</li>
+      </ul>
+      <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
+    </section>
+    <footer>
+      <p>Copyright Great Idea! 2018</p>
+    </footer>
+  </div>
 </body>
 
-</html>
+</html> 
